# inherit-docstring

./: .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  README.md  pyproject.toml  setup.sh
.github/workflows/: template_test.yml  test.yml  tmate.yml
src/inherit_docstring/: __init__.py  decorator.py  utils.py  version.py
tests/: conftest.py  test_base.py  test_colon.py  test_deprecated.py  test_inherit.py  test_no_blank_line.py  test_oneline.py  test_version.py  utils.py
