[project]
name = "inherit-docstring"
version = "0.2.0"
description = "A python decorator to inherit docstring."
authors = [ { name = "rcmdnk", email = "rcmdnk@gmail.com" } ]
repository = "https://github.com/rcmdnk/inherit-docstring"
homepage = "https://github.com/rcmdnk/inherit-docstring"
readme = "README.md"
license = "Apache-2.0"
keywords = ["docstring", "inherit", "decorator"]
classifiers = ["Development Status :: 3 - Alpha", "Environment :: Console", "Intended Audience :: Developers", "Intended Audience :: End Users/Desktop", "License :: OSI Approved :: Apache Software License", "Natural Language :: English", "Operating System :: OS Independent", "Programming Language :: Python :: 3.9", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.12", "Topic :: Documentation"]
requires-python = ">=3.9,<4.0"
dependencies = []

[dependency-groups]
dev = [
    "tomli >= 2.0.1; python_version < '3.11'",
    "pytest >= 8.0.0",
    "pytest-cov >= 6.0.0",
    "pytest-xdist >= 3.3.1",
    "pytest-benchmark >= 5.0.0",
    "pyproject-pre-commit[ruff] >= 0.3.5",
    "gitpython >= 3.1.41",
]

[project.urls]
Repository = "https://github.com/rcmdnk/inherit-docstring"
Homepage = "https://github.com/rcmdnk/inherit-docstring"

[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
addopts = "-n auto"
testpaths = ["tests",]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["ALL"]

ignore = [
    "E203", # Not PEP8 compliant and black insert space around slice: [Frequently Asked Questions - Black 22.12.0 documentation](https://black.readthedocs.io/en/stable/faq.html#why-are-flake8-s-e203-and-w503-violated)
    "E501", # Line too long. Disable it to allow long lines of comments and print lines which black allows.
    "D100", "D102", "D103", "D104", "D105", "D106", "D107", # Missing docstrings other than class (D101)
    "D401", # First line should be in imperative mood
    "D211", # `one-blank-line-before-class` (D203) and `no-blank-line-before-class` (D211) are incompatible. Ignoring `one-blank-line-before-class`.
    "D213", # `multi-line-summary-first-line` (D212) and `multi-line-summary-second-line` (D213) are incompatible. Ignoring `multi-line-summary-second-line`.
    "COM812", "D203", "ISC001", # The following rules may cause conflicts when used with the formatter: `COM812`, `D203`, `ISC001`. To avoid unexpected behavior, we recommend disabling these rules, either by removing them from the `select` or `extend-select` configuration, or adding them to the `ignore` configuration.
    "FBT001", # Boolean-typed positional argument in function definition
    "FBT002", # Boolean default positional argument in function definition
    "FBT003", # Boolean positional value in function call
    "TID252", # Prefer absolute imports over relative imports from parent modules
    "PLC0415", # `import` should be at the top-level of a file
    "D413", # Missing blank line after last section
    "D417",  # Missing argument descriptions in the docstring
    "ARG002", # Unused method argument
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101", # Use of `assert` detected
    "DTZ001", # `datetime.datetime()` called without a `tzinfo` argument
    "PLR2004", # Magic value used in comparison
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

[tool.mypy]
files = ["src/**/*.py"]
strict = true
warn_return_any = false
ignore_missing_imports = true
scripts_are_modules = true
install_types = true
non_interactive = true

[tool.numpydoc_validation]
checks = [
    "all",   # report on all checks, except the below
    "EX01",  # "No examples section found"
    "ES01",  # "No extended summary found"
    "SA01",  # "See Also section not found"
    "GL08",  # "The object does not have a docstring"
    "PR01",  # "Parameters {missing_params} not documented"
    "PR02",  # "Unknown parameters {unknown_params}"
    "RT01",  # "No Returns section found"
]
